test/SemanticAnalysis/Typename/InvalidTypenameTargetTypeCast.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() { }

class TestClass2() { }

void function0(typename_t<TestClass> typeValue) {
	// CHECK: .loci:10:12: error: Can't implicitly cast value of type 'typename_t<TestClass>&' to type 'typename_t<TestClass2>'.
	function1(typeValue);
}

void function1(unused typename_t<TestClass2> typeValue) { }

// CHECK: 1 error generated.
